notes and checkboxes are now offset to the left, so when selectMode is selected the checkboxes slide in from the left. Changed some colors. Fixed some spacing for consistency.

--- a/client/main.css
+++ b/client/main.css
@@ -25,9 +25,8 @@ main {
     border: 0;
     padding: 0;
     margin: 0;
-    width: 1.8rem;
-    height: 1.8rem;
-    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
     cursor: pointer;
 }
 
@@ -50,7 +49,14 @@ ul.notes-list {
     padding: 1rem;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
+    overflow: hidden;
+}
+
+.container,
+.note details {
+    position: relative;
+    transition: 0.3s;
 }
 
 /* make details and summary both columns */
@@ -79,6 +85,7 @@ ul.notes-list {
     margin: 1rem 0rem;
     font-size: 1rem;
     resize: none;
+    padding: 0;
 }
 
 /* underline text input to indicate clickable area */
@@ -134,8 +141,8 @@ details > summary::-webkit-details-marker {
 }
 
 .round label {
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: white;
+    border: 1px solid lightgrey;
     border-radius: 50%;
     cursor: pointer;
     height: 1.3rem;
@@ -163,8 +170,8 @@ details > summary::-webkit-details-marker {
 }
 
 .round input[type="checkbox"]:checked + label {
-    background-color: goldenrod;
-    border-color: goldenrod;
+    background-color: seagreen;
+    border-color: seagreen;
 }
 
 header {
